corpus/cpp/lambda_closure/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.cpp:3:33: error: lambda capture error
help: add the variable to the capture list or specify a default capture mode [=] or [&]
why: 'value' is not captured
| src/main.cpp:3:33
|     auto lambda = []() { return value; };
|                                 ^
note: the lambda has no capture-default
note: 'int value' declared here
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output